Altered the tutorial text to be a bit more specific, feel free to change around a bit more if you think of something more suitable. Also fixed a z-index issue where the graph button was above the tutorial text

--- a/CurrencySuiteWeb/App/Home/Home.css
+++ b/CurrencySuiteWeb/App/Home/Home.css
@@ -246,7 +246,8 @@ a{
             left: 20px;
             position: fixed;
             width: 90%;
-            height: 90%;
+            height: 95%;
+            z-index: 10;
 
             
         }
@@ -255,7 +256,8 @@ a{
             background-color: #F0F0F0;
             border: 1px solid #666666;
             border-bottom-width: 0px;
-            padding: 20px 20px 400px 20px;
+            padding: 0px 15px 400px 15px;
+            font-size: 100%;
         }
 
 
